--- a/Whip/OS/MessageBox.xaml
+++ b/Whip/OS/MessageBox.xaml
@@ -5,13 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Whip.OS"
         mc:Ignorable="d"
-        Title="MessageBox" Height="200" Width="auto">
+        Title="MessageBox" Height="200" Width="600">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <TextBlock Name="msg" Text="" Margin="30" TextWrapping="Wrap"/>
+        <TextBlock Name="msg" Text="" Margin="30" TextWrapping="Wrap" HorizontalAlignment="Left"/>
         <StackPanel Orientation="Horizontal" VerticalAlignment="Bottom" HorizontalAlignment="Center" Grid.Row="1" Margin="0,0,0,20">
             <StackPanel.Resources>
                 <Style TargetType="Button">
