--- a/WhipTests/Scripting/ScriptsDir.tt
+++ b/WhipTests/Scripting/ScriptsDir.tt
@@ -1,4 +1,4 @@
-﻿<#@ template debug="false" hostspecific="false" language="C#" #>
+﻿<#@ template debug="false" hostspecific="true" language="C#" #>
 <#@ assembly name="System.Core" #>
 <#@ import namespace="System.Linq" #>
 <#@ import namespace="System.Text" #>
@@ -16,10 +16,10 @@ namespace Whip.Scripting.Tests
 	public class ScriptTestsDirectory
 	{
 <#
-var d = @"e:\testdata\winamp\scripts\test\";
+var d = Host.ResolvePath("TestScripts");
 foreach (var t in Directory.EnumerateFiles(d, "*.maki"))
 {
-	WriteLine(string.Format("\t\t[TestMethod] public void {0}() => TestUtil.RunScript(@\"{1}\");", Path.GetFileNameWithoutExtension(t), t));
+	WriteLine(string.Format("\t\t[TestMethod] public void {0}() => TestUtil.RunScript(@\"{1}\");", Path.GetFileNameWithoutExtension(t), "Scripting/TestScripts/" + Path.GetFileName(t)));
 }
 #>
 	}
